Modified the code to always create complex data types. Takes default regex json [Thiru/Kumaran]